src/resources/packages/wizard/index.css
/* ... */
/* Modal Styles */
.components-modal__frame.tec-events-onboarding__modal {
	background: none;
	background-color: var(--tec-wp-core-grey-2);
}

/* Make full-screen modals FULL SCREEN */
.is-full-screen.components-modal__frame.tec-events-onboarding__modal {
	border-radius: 0;
	height: 100vh;
	margin: 0;
	max-width: 100vw;
	min-height: 100%;
	min-width: 100%;
	width: 100vw;
}

.tec-events-onboarding__modal .components-modal__content {
	margin: 0;
	padding: 0 var(--tec-spacer-5);
}

@media (min-width: 350px) {
	.tec-events-onboarding__modal .components-modal__content {
		padding: 0 var(--tec-spacer-3);
	}
}

.tec-events-onboarding__modal .components-modal__header {
	display: none;
}

/* -----------------------------------------------------------------------------
 * Tab Styles - until we change our build process to include multiple stylesheets.
 * ----------------------------------------------------------------------------- */

/* Tab Container */
.tec-events-onboarding__tabs {
	display: grid;
	grid-template-columns: auto;
	grid-template-rows: none;
	justify-content: center;
	row-gap: var(--tec-spacer-5);
}

.tec-events-onboarding__tabs.tec-events-onboarding__tab-welcome {
	gap: var(--tec-spacer-8);
}

@media (min-width: 1024px) {
	.tec-events-onboarding__tabs {
		gap: 100px;
		grid-template-columns: none;
		grid-template-rows: 84px auto;
	}

	.tec-events-onboarding__tabs.tec-events-onboarding__tab-welcome {
		gap: var(--tec-spacer-9);
	}
}

/* Tab Container Header */
.tec-events-onboarding__tabs-header {
	align-items: center;
	display: flex;
	flex-flow: column nowrap;
	gap: var(--tec-spacer-5);
	justify-content: space-between;
	margin: 0 auto;
	min-width: var(--tec-spacer-content-min-width);
	padding-bottom: 0;
	padding-top: var(--tec-spacer-5);
}

@media (min-width: 1024px) {
	.tec-events-onboarding__tabs-header {
		padding-bottom: var(--tec-spacer-3);
	}
}

/* Tab Container Header Brand Icon */
.tec-events-onboarding__header-icon {
	height: var(--tec-spacer-7);
	margin: 0 auto;
	width: var(--tec-spacer-7);
}

@media (min-width: 1024px) {
	.tec-events-onboarding__header-icon {
		margin: 0 auto var(--tec-spacer-5);
	}
}

.tec-events-onboarding_pro-icon {
	height: 12px;
	margin: 0 auto;
	width: 12px;
}

@media (min-width: 1024px) {
	.tec-events-onboarding__tabs-header {
		flex-flow: row nowrap;
	}

	.tec-events-onboarding__header-icon {
		left: var(--tec-spacer-3);
		margin: 0;
		position: absolute;
		top: var(--tes-spacer-7);
	}
}

/* TabList & Tabs */
.tec-events-onboarding__tabs-list {
	border-radius: var(--tec-admin-border-radius-1);
	display: grid;
	grid-template-columns: repeat(5, 1fr);
	justify-content: center;
	list-style: none;
	margin: 0 auto;
	max-width: 800px;
	min-width: var(--tec-spacer-content-min-width);
	width: 100%;
}

.tec-events-onboarding__tab-welcome .tec-events-onboarding__tabs-list {
	display: none;
}

.tec-events-onboarding__tab {
	align-items: center;
	border: 1px solid var(--tec-wp-core-grey-50);
	border-collapse: collapse;
	border-left-width: 0;
	color: transparent;
	counter-increment: tab;
	display: flex;
	flex-grow: 0;
	font-size: 1px;
	gap: var(--tec-spacer-2);
	height: auto;
	justify-content: center;
	letter-spacing: -1px;
	margin: 0;
	padding: 0;
	position: relative;
	white-space: nowrap;
}

@media (max-width: 1024px) {
	.tec-events-onboarding__tabs-list {
		grid-template-columns: repeat(7, var(--tec-spacer-tap-min-size));
		max-width: calc(100vw - 64px);
	}

	li.tec-events-onboarding__tab.tec-events-onboarding__tab--active {
		grid-column: span 3;
	}
}

.tec-events-onboarding__tab.tec-events-onboarding__tab--welcome {
	display: none;
}

.tec-events-onboarding__tab:nth-child(2) {
	border-bottom-left-radius: var(--tec-admin-border-radius-1);
	border-left-width: 1px;
	border-top-left-radius: var(--tec-admin-border-radius-1);
}

.tec-events-onboarding__tab:last-child {
	border-bottom-right-radius: var(--tec-admin-border-radius-1);
	border-top-right-radius: var(--tec-admin-border-radius-1);
}

@media (min-width: 1024px) {
	.tec-events-onboarding__tab {
		color: var(--tec-wp-core-grey-50);
		font-size: var(--tec-font-size-2);
		letter-spacing: normal;
	}
}

.tec-events-onboarding__tab--active {
	background-color: var(--tec-wp-core-blue-50);
	border-left-color: var(--tec-wp-core-blue-50);
	color: #fff;
	font-size: var(--tec-font-size-2);
	letter-spacing: normal;
}

.tec-events-onboarding__tab--active:hover {
	color: #fff;
}

.tec-events-onboarding__tab-button {
	align-items: center;
	background: none;
	border: none;
	color: inherit;
	cursor: pointer;
	display: flex;
	flex-flow: row;
	font-size: 0;
	justify-content: center;
	letter-spacing: normal;
	padding: var(--tec-spacer-1) var(--tec-spacer-5);
	width: 100%;
	z-index: 1;
}

.tec-events-onboarding__tab--active .tec-events-onboarding__tab-button {
	font-size: var(--tec-font-size-2);
}

@media (min-width: 1024px) {
	.tec-events-onboarding__tab-button {
		font-size: var(--tec-font-size-2);
	}
}

.tec-events-onboarding__tab--disabled,
.tec-events-onboarding__tab--disabled .tec-events-onboarding__tab-button {
	color: var(--tec-wp-core-grey-50);
	cursor: not-allowed;
}

.tec-events-onboarding__tab-title:before {
	border: 1px solid var(--tec-wp-core-grey-50);
	border-radius: var(--tec-admin-border-radius-round);
	box-sizing: border-box;
	color: var(--tec-wp-core-grey-50);
	content: counter(tab);
	display: inline-block;
	font-size: var(--tec-font-size-1);
	height: 18px;
	line-height: var(--tec-admin-line-height-0);
	padding: 0;
	text-align: center;
	vertical-align: middle;
	width: 18px;
}

.tec-events-onboarding__tab--completed .tec-events-onboarding__tab-title:before {
	background-color: var(--tec-wp-core-grey-50);
	color: var(--tec-wp-core-grey-0);
	content: '✓';
}

.tec-events-onboarding__tab--active .tec-events-onboarding__tab-title:before {
	background-color: #fff;
	border: 1px solid #fff;
	color: var(--tec-wp-core-blue-50);
	margin-right: var(--tec-spacer-2);
}
/* ... */

